# pyrenew-flu-light

./: .gitignore  .pre-commit-config.yaml  README.md  _typos.toml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: blank.md  development_task.md
assets/: paste_bin.txt
config/: params_2024-03-30.toml  params_2024-03-30_historical.toml
data/2024-04-13/: 2024-04-13_config.toml
data/config/: params_2024-01-20_historical.toml  params_2024-04-13_historical.toml
model_comparison/: compare.R
model_comparison/output/: compare.R
model_comparison/output/test/: information.txt
model_comparison/test/: information.txt  params_2024-01-20.json
notebooks/: evaluate.R  short_demo_2024-08-27.ipynb
pyrenew_flu_light/: __init__.py  analyze.py  checks.py  comp_inf.py  comp_obs.py  comp_tran.py  compare.py  filtered_data_NY  model.py  pad.py  plot.py  post.py  pre.py  rt.py  run.py  short_demo_2024-08-27.ipynb  tut_epim_port_msr.py
src/model/: inf.py  model.py  obs.py  tut_epim_port_msr.py
src/utils/: compare.py
